fix overlap

--- a/bundles/cms/public/scss/bootstrap.scss
+++ b/bundles/cms/public/scss/bootstrap.scss
@@ -38,7 +38,7 @@ $eden-admin-aside-hover-color: $white!default;
 
     &:hover {
       opacity : 1;
-      // z-index : 93;
+      z-index : 93;
     }
   }
 
